[package]
name = "collections"
version = "0.2.0"
edition = "2021"
authors = ["Andy K. S. Wong <andykswong@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andykswong/muds"
homepage = "https://github.com/andykswong/muds"
documentation = "https://docs.rs/muds"
description = "Common collections library"
categories = ["data-structures", "no-std", "wasm"]
keywords = ["collections", "muds"]

[package.metadata.component]
package = "muds:collections"

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
genindex = { path = "../genindex", version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde", "genindex/serde"]
