[package]
name = "genindex"
version = "0.2.2"
edition = "2021"
authors = ["Andy K. S. Wong <andykswong@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andykswong/muds"
homepage = "https://github.com/andykswong/muds"
documentation = "https://docs.rs/muds"
description = "Generational index library"
categories = ["data-structures", "no-std"]
keywords = ["genindex", "muds"]

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
num = { version = "0.4", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde"]
