[package]
name = "muds-derive"
version = "0.2.0"
edition = "2021"
authors = ["Andy K. S. Wong <andykswong@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andykswong/muge"
homepage = "https://github.com/andykswong/muge/tree/main/crates/muds"
documentation = "https://docs.rs/muds"
description = "Minimalistic Data Structure Library for Games in Rust"
categories = ["data-structures", "game-development", "game-engines", "no-std"]
keywords = ["ecs", "entity", "gamedev", "muds"]

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"

[lib]
proc-macro = true
