[package]
name = "muds"
version = "0.2.0"
edition = "2021"
authors = ["Andy K. S. Wong <andykswong@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andykswong/muds"
homepage = "https://github.com/andykswong/muds"
documentation = "https://docs.rs/muds"
description = "Minimalistic Data Structures and Entity-Component-System Library"
categories = ["data-structures", "no-std", "wasm"]
keywords = ["ecs", "muds"]

[package.metadata.component]
package = "muds:core"

[package.metadata.docs.rs]
features = ["std", "serde", "derive"]

[dependencies]
muds-derive = { path = "../muds-derive", version = "0.2", optional = true }
num = { version = "0.4", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
muds-derive = { path = "../muds-derive", version = "0.2" }
criterion = "0.5"
serde_json = "1.0"

[features]
default = ["std"]
std = ["serde?/std"]
derive = ["muds-derive"]
index-u64 = []

[[bench]]
name = "ecs"
harness = false
required-features = ["derive"]
